--- a/web/src/app/game/game.component.html
+++ b/web/src/app/game/game.component.html
@@ -1,3 +1,6 @@
 <app-move move="Rock" image="./assets/images/rock.jpg"></app-move>
 <app-move move="Paper" image="./assets/images/paper.jpg"></app-move>
 <app-move move="Scissors" image="./assets/images/scissors.jpg"></app-move>
+<ng-container *ngIf="this.lastPlayedGame">
+  <p [ngStyle]="{'color': (lastPlayedGame.result === 'Win') ? 'green' : 'red' }">{{lastPlayedGame.result}}</p>
+</ng-container>
